<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- ImageView untuk menampilkan gambar yang dipilih atau diambil -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/gambar_hasil_pilihan_atau_tangkapan_kamera" />

    <!-- Button untuk memilih gambar dari galeri -->
    <Button
        android:id="@+id/selectImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="8dp"
        android:text="@string/pilih_gambar" />

    <!-- Button untuk mengambil gambar menggunakan kamera -->

    <!-- Button untuk memulai klasifikasi gambar -->

    <!-- TextView untuk menampilkan hasil klasifikasi -->

    <Button
        android:id="@+id/captureImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_marginStart="5dp"
        android:layout_marginTop="-1dp"
        android:layout_toEndOf="@id/selectImageButton"
        android:text="@string/ambil_gambar" />

    <Button
        android:id="@+id/classifyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/selectImageButton"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-46dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="16dp"
        android:text="@string/klasifikasikan_gambar" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/classifyButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:textColor="#000000"
        android:text="@string/hasil_klasifikasi_akan_ditampilkan_di_sini" />

</RelativeLayout>
